<resources>
    <string name="app_name">Google Image Search</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search_option">SearchOptionActivity</string>

    <string name="text_search_option_name">Advanced Search Options</string>
    <string name="text_search_option_size">Image Size </string>
    <string name="text_search_option_color">Color Filter </string>
    <string name="text_search_option_type">Image Type </string>
    <string name="text_search_option_site">Site Filter </string>

    <string name="text_save">Save</string>
    <string name="text_cancel">Cancel</string>


    <string-array name="size_array">
        <item></item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>extra-large</item>
    </string-array>

    <string-array name="color_array">
        <item></item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
    </string-array>

    <string-array name="type_array">
        <item></item>
        <item>faces</item>
        <item>photo</item>
        <item>clip art</item>
        <item>line art</item>
    </string-array>
    <string name="title_activity_show_image">ShowImageActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
